[gd_scene load_steps=10 format=2]

[ext_resource path="res://Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Area.gd" type="Script" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.933594, 0.149521, 0.149521, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo" ]

[sub_resource type="CubeMesh" id=4]

material = SubResource( 3 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="BoxShape" id=5]

extents = Vector3( 1, 1, 1 )

[node name="Main" type="Spatial" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="Room" parent="." index="0" instance=ExtResource( 1 )]

[node name="DoorRight" parent="Room" index="4" instance=ExtResource( 2 )]

transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 4, 2.95, 6.89324 )

[node name="DoorLeft" parent="Room" index="5" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.95628, 2.95, 6.89324 )

[node name="DoorArea" type="Area" parent="Room" index="6"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0.95, 6 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Room/DoorArea" index="0"]

transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="FloorArea" type="Area" parent="Room" index="7"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.218518, 0.213056, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Room/FloorArea" index="0"]

transform = Transform( 6, 0, 0, 0, 0.5, 0, 0, 0, 5, -0.41316, 0, -1.06346 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="KinematicBody" parent="." index="1" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6784, 9.89313 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="2"]

transform = Transform( 0.981272, -0.190565, 0.0281134, 0.0605804, 0.443842, 0.894055, -0.182854, -0.875608, 0.447074, 0, 7.64806, 0.729927 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Transform" ]

[node name="CoinBody" type="RigidBody" parent="." index="3"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.79783, 1.682, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = false
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
linear_velocity = Vector3( 0, 0, 0 )
linear_damp = -1.0
angular_velocity = Vector3( 0, 0, 0 )
angular_damp = -1.0
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="CoinBody" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="CoinBody" index="1"]

shape = SubResource( 5 )
disabled = false
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="Room/DoorArea" to="Room/DoorArea" method="_on_Area_body_entered"]

[connection signal="body_exited" from="Room/DoorArea" to="Room/DoorArea" method="_on_Area_body_exited"]


